--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "administracion de ligas deportivas",
   "main": "server.js",
   "scripts": {
-    "star": "node server/server.js",
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Felipe Toro",
