--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "liga-master",
-  "version": "1.0.0",
-  "description": "administracion de ligas deportivas",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Felipe Toro",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "mongoose": "^5.3.13"
-  }
+    "name": "liga-master",
+    "version": "1.0.0",
+    "description": "administracion de ligas deportivas",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server/server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Felipe Toro",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^3.0.2",
+        "body-parser": "^1.18.3",
+        "express": "^4.16.4",
+        "mongoose": "^5.3.15",
+        "mongoose-unique-validator": "^2.0.2",
+        "underscore": "^1.9.1"
+    }
 }
